# building-code

./: .gitignore
.claude/: launch.json  settings.local.json
building-code-engine/: app.py  main.py  multi_parcel.py  pyproject.toml
building-code-engine/.claude/: launch.json
building-code-engine/api/: building_registry.py  lookup.py  vworld.py
building-code-engine/building_code_engine/: __init__.py  accessibility.py  building_act.py  elevator.py  energy.py  evacuation.py  fire_safety.py  legal_reference.py  multi_use_business.py  parking.py  redevelopment_check.py  report.py  seismic.py  setback.py  sewage.py  sunlight.py  tourism_special.py  use_change.py  zoning.py
building-code-engine/tests/: test_cases.py  test_engine.py  validate_legal.py
